--- a/tox.ini
+++ b/tox.ini
@@ -7,21 +7,6 @@ skipsdist = True
 sitepackages = False
 # NOTE: Avoid false positives by not skipping missing interpreters.
 skip_missing_interpreters = False
-# NOTES:
-# * We avoid the new dependency resolver by pinning pip < 20.3, see
-#   https://github.com/pypa/pip/issues/9187
-# * Pinning dependencies requires tox >= 3.2.0, see
-#   https://tox.readthedocs.io/en/latest/config.html#conf-requires
-# * It is also necessary to pin virtualenv as a newer virtualenv would still
-#   lead to fetching the latest pip in the func* tox targets, see
-#   https://stackoverflow.com/a/38133283
-# * It is necessary to declare setuptools as a dependency otherwise tox will
-#   fail very early at not being able to load it. The version pinning is in
-#   line with `pip.sh`.
-requires = pip < 20.3
-           virtualenv < 20.0
-           setuptools < 50.0.0
-# NOTE: https://wiki.canonical.com/engineering/OpenStack/InstallLatestToxOnOsci
 minversion = 3.2.0
 
 [testenv]
@@ -36,7 +21,7 @@ allowlist_externals =
     bash
     charmcraft
     rename.sh
-passenv = HOME TERM CS_* OS_* TEST_*
+passenv = HOME, TERM, CS_*, OS_*, TEST_*
 deps = -r{toxinidir}/test-requirements.txt
 
 [testenv:py38]
@@ -51,6 +36,11 @@ deps = -r{toxinidir}/requirements.txt
 
 [testenv:py310]
 basepython = python3.10
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/test-requirements.txt
+
+[testenv:py312]
+basepython = python3.12
 deps = -r{toxinidir}/requirements.txt
        -r{toxinidir}/test-requirements.txt
 
